fixed mobile overflow 📝

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1308,9 +1308,9 @@ input, select, textarea {
 	body {
 		background-image: url("images/overlay.png"), url("images/bg.jpg");
 		background-repeat: repeat, no-repeat;
-		background-size: auto, 100% 100vh;
+		background-size: auto, 100% 100%;
 		background-attachment: fixed;
-		overflow-y: scroll;
+		overflow-y: auto;
 	}
 
 		body.is-preload *, body.is-preload *:before, body.is-preload *:after {
